--- a/public/player.html
+++ b/public/player.html
@@ -8,11 +8,18 @@
 
 <body>
   <p>Welcome to the room lobby</p>
+  <div id="like_button_container"></div>
+
 
   <form id="message-form">
     <input type = "text" name="message" placeholder="message">
     <button type="submit" id="submit-btn"> Submit</button>
   </form>
+
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/react/18.1.0/umd/react.development.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/18.1.0/umd/react-dom.development.js"></script>
+  <script type = "module" src="components/player_component.js"></script>
 
   <script src = "/socket.io/socket.io.js"> </script>
   <script type="text/javascript" src="js/player.js"> </script>
