--- a/public/player.html
+++ b/public/player.html
@@ -6,20 +6,20 @@
   <title></title>
 </head>
 
-<body>
+<body style="background: #eb9a44; height:100%;">
+  <link rel="stylesheet" href="styles.css">
   <div id="root"></div>
 
-
-  <!-- <form id="message-form">
-    <input type = "text" name="message" placeholder="message">
-    <button type="submit" id="submit-btn"> Submit</button>
-  </form> -->
-
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   <script src = "/socket.io/socket.io.js"> </script>
+  <!-- <script
+  src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js"
+  crossorigin></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/react/18.1.0/umd/react.development.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/18.1.0/umd/react-dom.development.js"></script>
   <script type = "module" src="components/player.js"></script>
-  <!-- <script type = "module" src="components/player_component.js"></script> -->
-  <!-- <script type="text/javascript" src="js/player.js"> </script> -->
+
 </body>
 </html>
