--- a/public/create.html
+++ b/public/create.html
@@ -6,7 +6,8 @@
   <title></title>
 </head>
 
-<body>
+<body class="background">
+  <link rel="stylesheet" href="styles.css">
 <form action="/host.html">
     <div class="form-field">
         <label>
