--- a/public/index.html
+++ b/public/index.html
@@ -6,18 +6,22 @@
   <title></title>
 </head>
 
-<body>
-    <h1>Welcome to web app</h1> 
-<form action="/join.html">
-    <div class="form-field">
-        <button>Join</button>
+<body class="background">
+    <link rel="stylesheet" href="styles.css">
+    <h1 style="margin:10%;">Welcome to web app</h1> 
+    <div style="align-items:center;">
+        <form action="/join.html">
+            <div class="form-field">
+                <button class="center_button">Join</button>
+            </div>
+        </form>
+        <form action="/create.html">
+            <div class="form-field">
+                <button class="center_button">Create</button>
+            </div>
+        </form>
     </div>
-</form>
-<form action="/create.html">
-    <div class="form-field">
-        <button>Create</button>
-    </div>
-</form>
+
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
