--- a/public/index.html
+++ b/public/index.html
@@ -6,23 +6,23 @@
   <title></title>
 </head>
 
-<body class="background">
+<body class="background" style="align-items: center; ">
     <link rel="stylesheet" href="styles.css">
-    <h1 style="margin:10%;">Welcome to web app</h1> 
-    <div style="align-items:center;">
-        <form action="/join.html">
-            <div class="form-field">
-                <button class="center_button">Join</button>
-            </div>
-        </form>
-        <form action="/create.html">
-            <div class="form-field">
-                <button class="center_button">Create</button>
-            </div>
-        </form>
+    <div class="box">
+        <h1 >web app</h1>
+        <div style="margin:15%;"> 
+            <form action="/join.html">
+                <div class="form-field">
+                    <button class="center_button">Join</button>
+                </div>
+            </form>
+            <form action="/create.html">
+                <div class="form-field">
+                    <button class="center_button">Create</button>
+                </div>
+            </form>
+        </div>
     </div>
-
-
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
