--- a/public/create.html
+++ b/public/create.html
@@ -1,24 +1,31 @@
 <!doctype html>
 
-<html lang="en" dir="ltr">
+<html lang="en" dir="ltr" style="justify-content: center;">
 <head>
   <meta charset="utf-8">
   <title></title>
 </head>
 
-<body class="background">
+<body class="background" style="align-items: center; ">
   <link rel="stylesheet" href="styles.css">
-<form action="/host.html">
-    <div class="form-field">
-        <label>
-            Room name
-        </label>
-        <input  type="text" name="room_id" value = "">
+  <div class="box">
+    <h2>Create Room</h2>
+    <div style="margin:15%;"> 
+      <form action="/host.html">
+          <div class="form-field">
+              <!-- <label>
+                  Room name
+              </label> -->
+              <input class="input_bar" type="text" name="room_id" value = "" placeholder="Room name">
+          </div>
+          <div class="form-field">
+              <button class="center_button">Create</button>
+          </div>
+      </form>
     </div>
-    <div class="form-field">
-        <button>Create</button>
-    </div>
-</form>
+  </div>
+
+
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
