--- a/public/join.html
+++ b/public/join.html
@@ -6,32 +6,34 @@
   <title></title>
 </head>
 
-<body class="background">
+<body class="background"  style="align-items: center; ">
     <link rel="stylesheet" href="styles.css">
-<form action="/player.html">
-    <div class="form-field">
-        <label>
-            Display name
-        </label>
-        <input  type="text" name="name" value = "">
+    <div class="box">
+        <h2>Join Room</h2>
+        <div style="margin:5%;"> 
+            <form action="/player.html">
+                <div class="form-field">
+                    <input  class="input_bar" type="text" name="name" value = "" placeholder="Your name">
+                </div>
+                <div class="form-field">
+                    <input  class="input_bar" type="text" name="room_id" value = "" placeholder="Room name">
+                </div>
+                <div class="form-field">
+                    <button class="center_button">Join</button>
+                </div>
+            </form>
+            <div style="margin:1%; text-align: center;">
+                available rooms:
+                <div id="available"></div>
+            </div>
+        </div>
     </div>
-    <div class="form-field">
-        <label>
-            Room name
-        </label>
-        <input  type="text" name="room_id" value = "">
-    </div>
-    <div class="form-field">
-        <button>Join</button>
-    </div>
-</form>
-    available rooms:
-    <div id="available"></div>
+
+
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-  
   <script src = "/socket.io/socket.io.js"> </script>
   <script type="text/javascript" src="js/join.js"> </script>
 </body>
