--- a/public/player.html
+++ b/public/player.html
@@ -6,7 +6,7 @@
   <title></title>
 </head>
 
-<body style="background: #eb9a44; height:100%;">
+<body class="background">
   <link rel="stylesheet" href="styles.css">
   <div id="root"></div>
 
