--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 <body class="background" style="align-items: center; ">
     <link rel="stylesheet" href="styles.css">
     <div class="box">
-        <h1 >web app</h1>
+        <h1 >Quizapp</h1>
         <div style="margin:15%;"> 
             <form action="/join.html">
                 <div class="form-field">
